# novel-scraper

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  flake.nix  main.py  pyproject.toml
novel-scraper/: Cargo.toml
novel-scraper/src/: main.rs
src/: main.rs
src/models/: config.rs
