[package]
name = "novel-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
tracing = "0.1.40"
undetected-chromedriver = "=0.1.2"
tokio = "1.41.0"
thirtyfour = "0.34.0"
url = "2.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing-subscriber = "0.3.18"
serde_json = "1.0.132"
